feat: add deployment type to deployment reference dto #79